Use List.of() instead of Arrays.list()
Generalize the use of List.of to make the code leaner.

Signed-off-by: Gilles Thouenon <gilles.thouenon@orange.com>
Change-Id: I8a423ab9f460fddf3898425cabaa888df8cd102f